[gd_scene load_steps=16 format=3 uid="uid://ddu0723ay0skq"]

[ext_resource type="Script" path="res://Scenes/Enemies/StupidOne/stupid_enemy.gd" id="1_1phvn"]
[ext_resource type="Texture2D" uid="uid://cd7ad7ink47ub" path="res://Resources/IdleEnemy1.png" id="1_c65pc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85f23"]
atlas = ExtResource("1_c65pc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vn75"]
atlas = ExtResource("1_c65pc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a48v4"]
atlas = ExtResource("1_c65pc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t41kk"]
atlas = ExtResource("1_c65pc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6gf4"]
atlas = ExtResource("1_c65pc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvt2h"]
atlas = ExtResource("1_c65pc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_egbif"]
atlas = ExtResource("1_c65pc")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_07a5e"]
atlas = ExtResource("1_c65pc")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8q6m"]
atlas = ExtResource("1_c65pc")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvdqs"]
atlas = ExtResource("1_c65pc")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfuvf"]
atlas = ExtResource("1_c65pc")
region = Rect2(480, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_c65dl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85f23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vn75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a48v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t41kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6gf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvt2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egbif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07a5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8q6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvdqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfuvf")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2oocd"]
size = Vector2(19, 23)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1phvn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c65dl")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.502317

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(-0.5, 12.5)
shape = SubResource("RectangleShape2D_2oocd")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 13)
target_position = Vector2(13, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 13)
target_position = Vector2(-12, 0)

[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
